# L1-Cache-Simulator

./: CMakeLists.txt  Makefile  README.md  cache.cc  cache.h  matrix.cc
testcases/: CMakeLists.txt  testcase0.cc  testcaseReport.cc
